--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "mcap>=1.3.1",
     "numpy>=2.2.6",
     "pynput>=1.8.1",
     "pyrealsense2>=2.56.5.9235",
     "pytest>=9.0.2",
     "rerun-sdk==0.21.0",
     "scipy>=1.15.3",
+    "spectacularai[full]>=1.33.0",
     "zarr>=2.18.3",
 ]
 
